integration_tests/src/snapshots/integration_tests__cnft_tests__mint_v2_and_set_collection_v2__set_collection.snap
---
source: integration_tests/src/cnft_tests.rs
assertion_line: 798
expression: asset_after
---
{
  "interface": "V1_NFT",
  "id": "Beter35aQLYBh1JbaNX8XM4qiTpwHDRiAxCCNKcS3goF",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://example.com/my-nft.json",
    "files": [],
    "metadata": {
      "name": "My NFT",
      "symbol": "",
      "token_standard": "NonFungible"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "65NmSviGXHNv64vuqQxaffohrxueVhUHki57GJDLzT6a",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": true,
    "data_hash": "GmDqet7MNo1a2jTY5evpBbnPf9Hcw8djNA5pXAZYWXwJ",
    "creator_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "collection_hash": "3mG2ogUZaUxX7TKRbDNDUPnesYghsd87YFAduqs4TETk",
    "asset_data_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "flags": 0,
    "asset_hash": "BCY5u1schwiJZLskToQ7B1vfgAqRcMN1i1mBiVJe6dmu",
    "tree": "8zEzi2au653QJTdG8tokf1Bucg4F22672bTcWUfzpdm2",
    "seq": 2,
    "leaf_id": 0
  },
  "grouping": [
    {
      "group_key": "collection",
      "group_value": "BGUMAp9Gq7iTEuizy4pqaxsTyUCBK68MDfK752saRPUY",
      "verified": true
    }
  ],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.055,
    "basis_points": 550,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "non_transferable": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "HDSbP5G3YmFNJTQ6pviCr9o2k9rBRNXtC38mHmLA6Q3n"
  },
  "supply": {
    "print_max_supply": 0,
    "print_current_supply": 0,
    "edition_nonce": null
  },
  "mutable": true,
  "burnt": false
}
